Fix an edge-case of the linux readdir: We need the size of a linux dirent structure, not the size of a pointer to it.

PR:		131099
Submitted by:	Andreas Kies <andikies@gmail.com>
MFC after:	2 weeks